<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <TextView
        android:id="@+id/list_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/dp_24"
        android:gravity="center"
        android:text="@string/recyclerview"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2" />

    <com.thanhthienxmp.day005fragmentrecylcview.widget.RecyclerViewEmptySupport
        android:id="@+id/recycle_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:paddingVertical="@dimen/dp_24"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_title"
        app:layout_constraintVertical_bias=".8"
        tools:itemCount="20"
        tools:listitem="@layout/recycle_item" />

    <ImageView
        android:id="@+id/image_empty"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:alpha=".6"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/text_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".6"
        android:text="@string/empty_list" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/empty_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="image_empty,text_empty" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="image_empty,text_empty"
        app:flow_verticalGap="@dimen/dp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_title" />

</androidx.constraintlayout.widget.ConstraintLayout>